// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalWorkflowSource #filterEntityData DOCUMENT 1`] = `
{
  "filename": "test.pdf",
  "id": 1,
  "url": "/documents/1/test.pdf",
}
`;

exports[`ModalWorkflowSource #filterEntityData EMBED 1`] = `
{
  "authorName": "Test",
  "embedType": "video",
  "providerName": "YouTube",
  "thumbnail": "https://i.ytimg.com/vi/pSlVtxLOYiM/hqdefault.jpg",
  "title": "Test",
  "url": "https://www.youtube.com/watch?v=pSlVtxLOYiM",
}
`;

exports[`ModalWorkflowSource #filterEntityData IMAGE 1`] = `
{
  "alt": "Test",
  "format": "right",
  "id": 53,
  "src": "/media/images/test.width-500.jpg",
}
`;

exports[`ModalWorkflowSource #filterEntityData LINK anchor 1`] = `
{
  "url": "#testanchor",
}
`;

exports[`ModalWorkflowSource #filterEntityData LINK external 1`] = `
{
  "url": "https://www.example.com/",
}
`;

exports[`ModalWorkflowSource #filterEntityData LINK mail 1`] = `
{
  "url": "mailto:test@example.com",
}
`;

exports[`ModalWorkflowSource #filterEntityData LINK page 1`] = `
{
  "id": 60,
  "parentId": 1,
  "url": "/",
}
`;

exports[`ModalWorkflowSource #getChooserConfig LINK external 1`] = `
{
  "onload": {
    "type": "page",
  },
  "responses": {
    "pageChosen": [Function],
  },
  "url": "/admin/choose-external-link/",
  "urlParams": {
    "allow_anchor_link": true,
    "allow_email_link": true,
    "allow_external_link": true,
    "allow_phone_link": true,
    "link_text": "",
    "link_url": "https://www.example.com/",
    "page_type": "wagtailcore.page",
  },
}
`;

exports[`ModalWorkflowSource #getChooserConfig LINK mail 1`] = `
{
  "onload": {
    "type": "page",
  },
  "responses": {
    "pageChosen": [Function],
  },
  "url": "/admin/choose-email-link/",
  "urlParams": {
    "allow_anchor_link": true,
    "allow_email_link": true,
    "allow_external_link": true,
    "allow_phone_link": true,
    "link_text": "",
    "link_url": "test@example.com",
    "page_type": "wagtailcore.page",
  },
}
`;

exports[`ModalWorkflowSource #getChooserConfig LINK no entity 1`] = `
{
  "onload": {
    "type": "page",
  },
  "responses": {
    "pageChosen": [Function],
  },
  "url": "/admin/choose-page/",
  "urlParams": {
    "allow_anchor_link": true,
    "allow_email_link": true,
    "allow_external_link": true,
    "allow_phone_link": true,
    "link_text": "",
    "page_type": "wagtailcore.page",
  },
}
`;

exports[`ModalWorkflowSource #getChooserConfig LINK page 1`] = `
{
  "onload": {
    "type": "page",
  },
  "responses": {
    "pageChosen": [Function],
  },
  "url": "/admin/choose-page/1/",
  "urlParams": {
    "allow_anchor_link": true,
    "allow_email_link": true,
    "allow_external_link": true,
    "allow_phone_link": true,
    "link_text": "",
    "page_type": "wagtailcore.page",
  },
}
`;

exports[`ModalWorkflowSource #getChooserConfig LINK root page 1`] = `
{
  "onload": {
    "type": "page",
  },
  "responses": {
    "pageChosen": [Function],
  },
  "url": "/admin/choose-page/",
  "urlParams": {
    "allow_anchor_link": true,
    "allow_email_link": true,
    "allow_external_link": true,
    "allow_phone_link": true,
    "link_text": "",
    "page_type": "wagtailcore.page",
  },
}
`;

exports[`ModalWorkflowSource works 1`] = `""`;
